Removendo restrições de links do CSRF